# work

./: .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habit/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
